--- a/src/popup.html
+++ b/src/popup.html
@@ -16,7 +16,7 @@
         color: #000;
         text-decoration: none;
         text-align: center;
-        float: right;
+        float: left;
         -webkit-box-shadow: inset 0 0 30px #fff;
         box-shadow: inset 0 0 30px #fff;
         border-radius: 2px;
@@ -114,10 +114,10 @@
     <div id="history"></div>
     <div id="error" class="error-chrome-regex"></div>
     <div id="operates" class="operates">
-        <a href="#" id="insensitive" type="button" title="Case Insensitive"><i class="fa fa-info"></i></a>
-        <a href="#" id="copy-to-clipboard" type="button" title="Copy matches to clipboard"><i class="fa fa-copy"></i></a>
-        <a href="#" id="clear" type="button" title="Clear"><i class="fa fa-trash-o"></i></a>
         <a href="#" class="selected" id="show-history" type="button" title="History"><i class="fa fa-history"></i></a>
+        <a href="#" id="clear" type="button" title="Clear"><i class="fa fa-trash-o"></i></a>
+        <a href="#" id="copy-to-clipboard" type="button" title="Copy matches to clipboard"><i class="fa fa-copy"></i></a>
+        <a href="#" id="insensitive" type="button" title="Case Insensitive"><i class="fa fa-info"></i></a>
         <a href="#" id="unescape" type="button" title="Un Escape URI Charactors"><i class="fa fa-key"></i></a>
         <div id="numResults"></div>
     </div>
