ajust the button position

--- a/src/popup.html
+++ b/src/popup.html
@@ -51,7 +51,7 @@
       #inputRegex {
         width: 30em;
         border-radius: 2px;
-        padding-right: 5em;
+        padding-right: .5em;
         margin-right: .5em;
        -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .125);
                box-shadow: 0 1px 1px rgba(0, 0, 0, .125);
