fixed highlight remove break the original nodes info

--- a/src/popup.html
+++ b/src/popup.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Chrome Regex Search Colorful</title>
+    <title>Colorful Search Result with Regex </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <style type="text/css">
       a:link, a:visited {
         display: block;
-        width: 2em;  
+        width: 2em;
         padding: 0.2em;
         margin-left: 1px;
         line-height: 1.6;
@@ -53,6 +53,7 @@
         border-radius: 2px;
         padding-right: .5em;
         margin-right: .5em;
+        border: none;
        -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .125);
                box-shadow: 0 1px 1px rgba(0, 0, 0, .125);
       }
@@ -87,9 +88,9 @@
         font-style: italic;
         color: #555;
       }
-      
+
       .clearHistoryButton {
-        color: #000; 
+        color: #000;
         text-decoration: none;
         float: left !important;
         width: 7em !important;
@@ -98,10 +99,14 @@
       }
 
       body {
-        background-color: #dddddd;
+        background-color: #efefef;
+        padding-bottom: 2px;
       }
       .error-chrome-regex {
         color: #FF0000;
+      }
+      .operates{
+        height: 2em;
       }
     </style>
   </head>
