--- a/src/popup.html
+++ b/src/popup.html
@@ -121,7 +121,7 @@
     <div id="operates" class="operates">
         <a href="#" class="selected" id="show-history" type="button" title="History"><i class="fa fa-history"></i></a>
         <a href="#" id="clear" type="button" title="Clear"><i class="fa fa-trash-o"></i></a>
-        <a href="#" id="copy-to-clipboard" type="button" title="Copy matches to clipboard"><i class="fa fa-copy"></i></a>
+        <!--a href="#" id="copy-to-clipboard" type="button" title="Copy matches to clipboard"><i class="fa fa-copy"></i></a-->
         <a href="#" id="insensitive" type="button" title="Case Insensitive"><i class="fa fa-info"></i></a>
         <a href="#" id="unescape" type="button" title="Un Escape URI Charactors"><i class="fa fa-key"></i></a>
         <div id="numResults"></div>
